--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==8.1.3
 colorama==0.4.6
 dnspython==2.3.0
 email-validator==2.0.0.post2
+Faker==18.11.2
 fastapi==0.99.0
 h11==0.14.0
 httpcore==0.17.2
@@ -19,10 +20,13 @@ orjson==3.9.1
 packaging==23.1
 pathspec==0.11.1
 platformdirs==3.8.0
+psycopg2==2.9.6
 pydantic==1.10.10
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
 PyYAML==6.0
+six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
 typing_extensions==4.7.0
